# pv-apache-beam

./: .gitignore  README.md  requirements.txt
compare_short_tasks/: DataflowRunner.sh  main.py
example0/: README.md  main.py
example1/: DataflowRunner.sh  DirectRunner.sh  main.py
example3/: DataflowRunner.sh  DirectRunner.sh  Dockerfile  PortableRunner.sh  inputfiles.txt  main.py
example3/transformers/: setup.cfg
gridlabd/: Dockerfile  PortableRunner.sh  main.py
gridlabd-example/: DataflowRunner.sh  Dockerfile  PortableRunner.sh  main.py
gridlabd/transformers/: setup.cfg
gridlabd/transformers/src/transformers/: pv_transformers.py
gridlabd/transformers/src/transformers.egg-info/: PKG-INFO  requires.txt
multicount/: DataflowRunner.sh  wordcount.py
parallelism/: DataflowRunner.sh  main.py
solar-parallel-multi/: DataflowRunner.sh  Dockerfile  main.py
solardatatools-custom-package-example/: Dockerfile  main.py
solardatatools-full-pipeline/: results1-00000-of-00001  run.py  sdt_transformers.py
solardatatools-onefile-examples/: main.py
solardatatools-parallel/: DataflowRunner.sh  main.py
splitDoFn/: main.py
wordcount/: DataflowRunner.sh  wordcount.py
wordcount-customcontainer/: Dockerfile  Dockerfile-nogridlabd  Dockerfile-old  PortableRunner.sh  main.py
wordcount-customcontainer/transformers/: setup.cfg
wordcount-example/: DataflowRunner.sh  results-00000-of-00001  wordcount.py
wordcount-spilitabledofu/: DataflowRunner.sh  partition.py  sdf.py  wordcount.py
wordcount_python3.9.6_debian/: Dockerfile  kinglear-1.txt
(+56 files in other folders)
