[metadata]
name = transformers
version = 0.0.1
author = Jimmy Leu
description = Transformers demo package

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    apache-beam[gcp]
    pandas
    fsspec
    gcsfs
    numpy

    
[options.packages.find]
where = src